More feedback and info
More general feedback, more use of the “confident” boolean, and
inclusion of an “INFO” option on the main menu.

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
-Open the config file and follow the instructions. Happy grading!
+Just open the config file and follow the instructions. Happy grading!
 
-
+=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
 
 INFO ON THE BEARFACTS FILE:
 
